2005-11-15  Kai Vehmanen  <kai.vehmanen@nokia.com>

	* Removed obsolete NUTAG_MEDIA* tags.

2005-11-03  Pekka Pessi  <Pekka.Pessi@nokia.com>

	* Indicate the response status with the nua_i_<method>.

	Now returning the status of the returned response in
	nua_i_<method> events. The application can determine from status
	code if it has to respond.

	* Added NUTAG_ALLOW() and NUTAG_ALLOW_REF() to nua.

	* Try to catch more errors when responding to invite in nua.

	* Fixed call state events with UPDATE in nua.

	Fixed the order the nua_i_update and nua_i_state events are sent.
	Now we are using session-timer headers in responses, too.

	* Added NUTAG_ALLOW() and NUTAG_ALLOW_REF() to nua.

	* Renamed NUTAG_USE_LEG() as NUTAG_USE_DIALOG() in nua.

2005-10-21  Pekka Pessi  <Pekka.Pessi@nokia.com>

  * Fixed challenge header checking in nua/nua_stack.c when receiving 401/407.
  Now checking for Proxy-Authenticate header when receiving 407 and
  WWW-Authenticate header when receiving 401.

    M ./libsofia-sip-ua/nua/nua_stack.c -2 +2

  * Added test case for 407 followed by 401.

    M ./libsofia-sip-ua/nua/test_nua.c -3 +53

2005-10-18  Pekka Pessi  <Pekka.Pessi@nokia.com>

  * Test case numbering.

    M ./libsofia-sip-ua/nua/test_nua.c -1 +1

  * Log level setting.

    M ./libsofia-sip-ua/nua/test_nua.c -1 +2

  * Added a basic session timer test.

    M ./libsofia-sip-ua/nua/test_nua.c +121

  * Fixed session-timer role selection at uas end.

    M ./libsofia-sip-ua/nua/nua_stack.c -10 +13

  * Added -s option.

    M ./libsofia-sip-ua/nua/test_nua.c -2 +10

  * Simplified test_basic_call().

    M ./libsofia-sip-ua/nua/test_nua.c -18 +1

  * Added test case for nua_authenticate.

    M ./libsofia-sip-ua/nua/test_nua.c +187

  * Fixed response to 401.
  We are now not terminating call when application is expected to authenticate
  request. Should we add

    M ./libsofia-sip-ua/nua/nua_stack.c -10 +28
